Fix height adjustment for Projects tab to display footer without scrollbar

--- a/src/css/TabContent.css
+++ b/src/css/TabContent.css
@@ -10,6 +10,7 @@
 .content-container {
     margin-top: 10vh;
     width: 100%;
+    height: 90vh;
 }
 .intro-container {
     display: block;
@@ -63,6 +64,7 @@
     flex-direction: column;
     animation-name: content-pop;
     animation-duration: 0.5s;
+    height: 100%;
 }
 
 .empty-content {
@@ -170,8 +172,9 @@
 .card-container {
     display: flex;
     justify-content: center;
-    align-content: center;
-    margin-top: auto;
+    align-content: space-around;
+    height: 100%;
+    margin-top: 2vh;
     gap: 2.5rem;
     flex-wrap: wrap;
     animation-name: slide-in;
@@ -302,8 +305,10 @@
 }
 
 .project-footer {
+    width: 100%;
     color: var(--secondary-font-color);
     font-size: 0.8rem;
+    text-align: center;
     align-self: center;
     animation-name: fade-in;
     animation-duration: 1.5s;
